[horizontal]
1.0:: Initialisation du plugin.